# nyc-qol-risk

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 00_get_that_data.ipynb  01a_explore_311.ipynb  01b_explore_pluto.ipynb  02_model_urban_pressure.ipynb  03_generate_rankings.ipynb  03_model_validation_reported_urban_pressure.ipynb  04_generate_rankings.ipynb  helpers.py
src/aggregate/: aggregate_311_to_nta.py  build_pluto_nta_features.py  collect_311_complaint_types.py  helpers.py
src/datasets/ingestion/: download_nyc_311.py
src/datasets/nyc/ingestion/: download_nta_geojson.py  download_nyc_311_noise.py  ingestion_utils.py
src/datasets/nyc/queries/: nyc_311.soql  nyc_311_noise.soql
src/features/: pluto_nta.py
src/ingestion/: download_nyc_311.py  download_nyc_pluto.py  ingestion_utils.py  nyc_open_data_api.py
src/models/: qol_model.py
src/models/stress/: municipal_311_v1.py
src/queries/: nyc_pluto.soql
